--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Article index{% endblock %}
 
 {% block body %}
-    <h1>Article index</h1>
+    <h1>My experimental blog</h1>
 
     <table class="table">
         <thead>
